# sol-token-faucet

./: .gitignore  Cargo.toml  faucet-config.json
client/: Cargo.toml
client/src/: main.rs  utils.rs
program/: Cargo.toml
program/src/: instructions.rs  lib.rs  processor.rs  state.rs
program/src/processor/: initialize_faucet.rs  refill_faucet.rs  request_tokens.rs
tests/: Cargo.toml
tests/src/: initialize_faucet_test.rs  lib.rs  refill_faucet_test.rs  request_tokens_test.rs  test_utils.rs
