cargo-features = ["edition2024"]

[package]
name = "token-faucet-client"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "2.1.17"
solana-client = "2.1.17"
serde = "1.0.140"
serde_json = "1.0.140"
token-faucet-program = { version = "0.1.0", path = "../program" }
clap = { version = "4.5.23", features = ["derive"] }